test/tests/stages/18_structures/invalid_parse/var_decl_bad_type_specifier.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  struct
  identifier(s)
  ;
  struct
  identifier(s)
  long
  identifier(a)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
